# crypto-msg-parser

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crypto-contract-value/: Cargo.toml  README.md
crypto-contract-value/src/: lib.rs
crypto-contract-value/src/exchanges/: bitmex.rs  gate.rs  huobi.rs  kucoin.rs  mexc.rs  okx.rs  utils.rs  zbg.rs
crypto-message/: Cargo.toml  README.md
crypto-message/src/: lib.rs  order.rs
crypto-message/src/compact/: message.rs  order.rs
crypto-message/src/proto/: message.rs
crypto-msg-parser/: Cargo.toml  README.md
crypto-msg-parser/src/: lib.rs
crypto-msg-parser/src/exchanges/: bitfinex.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  ftx.rs  utils.rs
crypto-msg-parser/src/exchanges/binance/: binance_all.rs  binance_option.rs  binance_spot.rs  mod.rs
crypto-msg-parser/src/exchanges/bitget/: bitget_mix.rs  mod.rs
crypto-msg-parser/src/exchanges/bitget/before20220429/: bitget_swap.rs  mod.rs
crypto-msg-parser/src/exchanges/dydx/: dydx_swap.rs  mod.rs
crypto-msg-parser/src/exchanges/gate/: gate_spot.rs  gate_spot_20210916.rs  gate_spot_current.rs  gate_swap.rs  mod.rs
crypto-msg-parser/src/exchanges/huobi/: funding_rate.rs  huobi_inverse.rs  huobi_linear.rs  huobi_spot.rs  mod.rs
crypto-msg-parser/src/exchanges/kraken/: kraken_futures.rs  kraken_spot.rs  mod.rs
crypto-msg-parser/src/exchanges/kucoin/: kucoin_spot.rs  kucoin_swap.rs  mod.rs
crypto-msg-parser/src/exchanges/mexc/: mexc_spot.rs  mexc_swap.rs  mod.rs
crypto-msg-parser/src/exchanges/okx/: mod.rs  okx_v3.rs  okx_v5.rs
crypto-msg-parser/src/exchanges/zb/: mod.rs  zb_spot.rs  zb_swap.rs
crypto-msg-parser/src/exchanges/zbg/: mod.rs  zbg_spot.rs  zbg_swap.rs
crypto-msg-parser/tests/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  dydx.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  okx.rs  okx_v3.rs  utils.rs  zb.rs  zbg.rs
crypto-pair/: Cargo.toml  README.md
crypto-pair/src/: lib.rs
crypto-pair/src/exchanges/: binance.rs  bitfinex.rs  bitget.rs  bitmex.rs  bitstamp.rs  bybit.rs  deribit.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  okx.rs  utils.rs  zb.rs  zbg.rs
crypto-pair/tests/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bybit.rs  coinbase_pro.rs  deribit.rs  dydx.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  okx.rs  zb.rs  zbg.rs
crypto-pair/tests/utils/: mod.rs
