[package]
name = "crypto-contract-value"
version = "1.7.22"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "Get contract value."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-msg-parser/tree/main/crypto-contract-value"
keywords = ["cryptocurrency", "blockchain", "trading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-market-type = "1.1.5"
crypto-pair = "2.3.17"
once_cell = "1"
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
