[package]
name = "crypto-contract-value"
version = "1.7.25"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "Get contract value."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-msg-parser/tree/main/crypto-contract-value"
keywords = ["cryptocurrency", "blockchain", "trading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-market-type = "1.1.6"
crypto-pair = "2.3.20"
once_cell = "1.19.0"
reqwest = { version = "0.12.1", features = ["blocking", "gzip"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
