[package]
name = "crypto-message"
version = "1.1.17"
edition = "2021"
description = "Unified data structures for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-msg-parser/tree/main/crypto-message"
keywords = ["cryptocurrency", "blockchain", "trading"]


[dependencies]
ahash = "0.8.3"
crypto-market-type = "1.1.5"
crypto-msg-type = "1.0.11"
protobuf = "3.2.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"

[features]
f32 = []
