[package]
name = "crypto-message"
version = "1.1.19"
edition = "2021"
description = "Unified data structures for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-msg-parser/tree/main/crypto-message"
keywords = ["cryptocurrency", "blockchain", "trading"]


[dependencies]
ahash = "0.8.6"
crypto-market-type = "1.1.6"
crypto-msg-type = "1.0.12"
protobuf = "3.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"

[features]
f32 = []
