[package]
name = "crypto-msg-parser"
version = "2.9.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse websocket messages from cryptocurreny exchanges"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-msg-parser/tree/main/crypto-msg-parser"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.31"
crypto-contract-value = "1.7.24"
crypto-market-type = "1.1.6"
crypto-msg-type = "1.0.12"
crypto-message = "1.1.19"
crypto-pair = "2.3.19"
if_chain = "1.0.2"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["blocking", "gzip"] }
simple-error = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
