[package]
name = "crypto-msg-parser"
version = "2.9.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse websocket messages from cryptocurreny exchanges"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-msg-parser/tree/main/crypto-msg-parser"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.38"
crypto-contract-value = "1.7.25"
crypto-market-type = "1.1.6"
crypto-msg-type = "1.0.12"
crypto-message = "1.1.21"
crypto-pair = "2.3.20"
if_chain = "1.0.2"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["blocking", "gzip"] }
simple-error = "0.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
strum = "0.26.3"
strum_macros = "0.26.4"
