[package]
name = "crypto-pair"
version = "2.3.19"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse exchange-specific symbols to unified format"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-msg-parser/tree/main/crypto-pair"

[dependencies]
crypto-market-type = "1.1.6"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["blocking", "gzip"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
